<resources>
    <string name="app_name">PopularMovieApp</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="movie_title">Title:</string>
    <string name="movie_date">Release Date:</string>
    <string name="movie_overview">Overview:</string>
    <string name="movie_votes">Average Votes</string>

    <string name="popular_movies">Popular Movies</string>
    <string name="top_rated_movies">Top Rated Movies</string>

    <string name="trailer">Trailer</string>
    <string name="reviews_title">Reviews</string>
    <string name="content_authority">com.example.jeffr.popularmovieapp</string>
</resources>
