<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="100dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/movie_poster_imageview"
            android:layout_weight="1"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            />
        <LinearLayout
            android:layout_weight="3"
            android:layout_width="350dp"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/movie_title_textview"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/movie_title"/>
            <TextView
                android:id="@+id/movie_date_textview"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/movie_date"/>
            <TextView
                android:id="@+id/movie_overview_textviewview"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/movie_overview"/>
        </LinearLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>