<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailedMovieActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/appbar_height"
            android:background="@color/bg_color_appba"
            android:paddingTop="@dimen/appbar_padding_top"
            android:theme="@style/AppTheme.AppBarOverlay">

            <ImageView
                android:id="@+id/movie_poster_imageview"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:id="@+id/trailer_favorite_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/trailer_favorite_layout_height"
        android:orientation="horizontal"
        android:layout_below="@id/appbar"
        android:background="@color/trailer_and_favorite_bg">
        <Button
            android:id="@+id/trailer_button"
            android:layout_weight="5"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/trailer"
            android:background="@color/trailer_and_favorite_bg"
            android:textColor="@color/trailer_button_text"
            android:textSize="@dimen/trailer_button_text"
            android:textAlignment="textStart"
            android:layout_marginLeft="@dimen/trailer_button_margin"/>
        <ImageButton
            android:id="@+id/favorite_button"
            android:layout_weight="1"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:srcCompat="@drawable/ic_favorite"
            android:background="@color/trailer_and_favorite_bg"
            />

    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/trailer_favorite_layout"
            android:orientation="vertical">

            <TextView
                android:id="@+id/movie_title_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="@dimen/movie_title_size" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/movie_date" />

                <TextView
                    android:id="@+id/movie_date_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/movie_votes"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/movie_votes_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="@dimen/movie_votes_size" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/movie_overview"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/movie_overview_textviewview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center" />

        </LinearLayout>
    </RelativeLayout>
</ScrollView>

